// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`演算 1 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"left\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 5,
                                                  \\"endOffset\\": 5,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 5,
                                                  \\"endColumn\\": 5,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 9,
                                                  \\"endOffset\\": 9,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"+\\",
                                      \\"startOffset\\": 7,
                                      \\"endOffset\\": 7,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 7,
                                      \\"endColumn\\": 7,
                                      \\"tokenTypeIdx\\": 16,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Plus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 15,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              16,
                                              17
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"16\\": true,
                                              \\"17\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 16,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ],
                \\"ToRightToken\\": [
                  {
                    \\"image\\": \\"->\\",
                    \\"startOffset\\": 11,
                    \\"endOffset\\": 12,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 11,
                    \\"endColumn\\": 12,
                    \\"tokenTypeIdx\\": 34,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToRightToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 34,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"right\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 14,
                    \\"endOffset\\": 18,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 14,
                    \\"endColumn\\": 18,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`演算 2 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"right\\": [
                  {
                    \\"image\\": \\"val\\",
                    \\"startOffset\\": 5,
                    \\"endOffset\\": 7,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 5,
                    \\"endColumn\\": 7,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 9,
                    \\"endOffset\\": 10,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 9,
                    \\"endColumn\\": 10,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"left\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"StringLiteral\\": [
                                                {
                                                  \\"image\\": \\"\\\\\\"Switch\\\\\\"\\",
                                                  \\"startOffset\\": 12,
                                                  \\"endOffset\\": 19,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 12,
                                                  \\"endColumn\\": 19,
                                                  \\"tokenTypeIdx\\": 3,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"StringLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 3,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"right\\": [
                  {
                    \\"image\\": \\"aaa\\",
                    \\"startOffset\\": 25,
                    \\"endOffset\\": 27,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 5,
                    \\"endColumn\\": 7,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 29,
                    \\"endOffset\\": 30,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 9,
                    \\"endColumn\\": 10,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"left\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"Identifier\\": [
                                                {
                                                  \\"image\\": \\"val\\",
                                                  \\"startOffset\\": 32,
                                                  \\"endOffset\\": 34,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 12,
                                                  \\"endColumn\\": 14,
                                                  \\"tokenTypeIdx\\": 7,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Identifier\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 7,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"StringLiteral\\": [
                                                {
                                                  \\"image\\": \\"\\\\\\"aaa\\\\\\"\\",
                                                  \\"startOffset\\": 38,
                                                  \\"endOffset\\": 42,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 18,
                                                  \\"endColumn\\": 22,
                                                  \\"tokenTypeIdx\\": 3,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"StringLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 3,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"+\\",
                                      \\"startOffset\\": 36,
                                      \\"endOffset\\": 36,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 16,
                                      \\"endColumn\\": 16,
                                      \\"tokenTypeIdx\\": 16,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Plus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 15,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              16,
                                              17
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"16\\": true,
                                              \\"17\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 16,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
